mapbox initial integrate

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
   <!-- Custom styles for this template-->
   <link href="assets/Template/css/sb-admin-2.min.css" rel="stylesheet">
 
+  <!-- mapbox style-->
+
 </head>
 <body id="page-top">
   <app>Loading...</app>
@@ -30,6 +32,8 @@
    <!-- Page level plugins -->
    <script src="assets/Template/vendor/chart.js/Chart.min.js"></script>
  
+   <!-- mapbox plugin-->
+   <link href='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
    <!-- Page level custom scripts -->
    <!-- <script src="assets/Template/js/demo/chart-area-demo.js"></script>
    <script src="assets/Template/js/demo/chart-pie-demo.js"></script> -->
